syntax = "proto3";
package proto;


service Messaging {
	rpc SendMessage(Message) returns (Status) {}
	rpc CheckMessageStatus(Message) returns (Status) {}
	rpc ChangeMessageStatus(Message) returns (Status) {}
	rpc RetrieveMessages(Message) returns (stream Message){}
}

service Commenting {
	rpc PostComment(Message) returns (Status) {}
	rpc DeleteComment(Message) returns (Status) {}
	rpc EditComment(Message) returns (Status) {}
}

message Message {
	string TextMessage = 1;
	repeated string MessageDestination = 2;
}



service Heartbeating {
	rpc TradeHeartbeat(Beat) returns (Status) {}
}

message Beat {
	bytes Beat = 1;
}

service PictureUploading {
	rpc UploadPicture(stream Chunk) returns (Status);
	rpc SendChecksum(Checksum) returns (Status);
}

message Chunk {
	oneof content {
	bytes Content = 1;
	string Location = 2;
	string TextPost = 3;
	}
}

enum StatusCode {
	Unknown = 0;
	Success = 1;
	Failed = 2;
}

message Status {
	string Message = 1;
	StatusCode Code = 2;
}

message Checksum {
	int64 ChecksumValue = 1;
}

service PictureDownloading {
	rpc DownloadPicture(PictureLocation) returns (stream Chunk);
}

message PictureLocation {
	string Location = 1;
}