syntax = "proto3";
package protos;


service Commenting {
	rpc PostComment(Message) returns (Status) {}
	rpc DeleteComment(Message) returns (Status) {}
	rpc EditComment(Message) returns (Status) {}
}


service Heartbeating {
	rpc TradeHeartbeat(Beat) returns (Status) {}
}

message Beat {
	bytes Beat = 1;
}

service PictureUploading {
	rpc UploadPicture(stream Chunk) returns (Status);
}

message Chunk {
	oneof ChunkContent {
	bytes Content = 1;
	string Location = 2;
	string TextPost = 3;
	int64 Checksum = 4;
	}
}

enum StatusCode {
	Unknown = 0;
	Success = 1;
	Failed = 2;
}

message Status {
	string Message = 1;
	StatusCode Code = 2;
}

service PictureDownloading {
	rpc DownloadPicture(PictureLocation) returns (stream Chunk);
}

message PictureLocation {
	string Location = 1;
}